Todo: fix update weather

--- a/BlazorServer/Pages/FetchData.razor
+++ b/BlazorServer/Pages/FetchData.razor
@@ -13,6 +13,7 @@
                     <th>Week Day</th>
                     <th>Temperature</th>
                     <th>Date</th>
+                    <th>Delete weather</th>
                 </tr>
             </thead>
             <tbody>
