--- a/BlazorServer/Pages/Index.razor
+++ b/BlazorServer/Pages/Index.razor
@@ -62,8 +62,8 @@
 
             <EditForm Model="@_updateWeatherDay">
                 <div class="form-group">
-                    <label for="WeekDay">Weather Day Name</label>
-                    <input type="text" id="weekday" class="form-control" @bind-value="@_updateWeatherDay.WeekDay" />
+                    <label for="we">Weather Day Name</label>
+                    <input type="text" id="weatherid" class="form-control" @bind-value="@_updateWeatherDay.WeekDay" />
                 </div>
 
                 <div class="form-group">
@@ -95,8 +95,7 @@
     }
 
 
-    public WeatherDay NewWeatherDay { get; set; } = new WeatherDay();
-
+    private WeatherDay NewWeatherDay { get; set; } = new WeatherDay();
     private async Task AddNewWeather()
     {
         NewWeatherDay.DateTime = DateTime.Now;
