--- a/BlazorServer/Shared/NavMenu.razor
+++ b/BlazorServer/Shared/NavMenu.razor
@@ -22,16 +22,22 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        
+         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="radzencounter">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Radzen counter
+            </NavLink>
+        </li>
     </ul>
 </div>
 
 @code {
-    private bool collapseNavMenu = true;
+    private bool _collapseNavMenu = true;
 
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+    private string NavMenuCssClass => _collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
     {
-        collapseNavMenu = !collapseNavMenu;
+        _collapseNavMenu = !_collapseNavMenu;
     }
 }
