--- a/BlazorServer/Pages/_Host.cshtml
+++ b/BlazorServer/Pages/_Host.cshtml
@@ -13,10 +13,12 @@
     <title>BlazorServer</title>
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css">
     
-    <!--- Boostrap Radzen
-     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css"> -->
+    <!--- 
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/default-base.css"> -->
+    
+    <!--- Boostrap Radzen -->
+     <link rel="stylesheet" href="_content/Radzen.Blazor/css/default.css">
     
     <link href="css/site.css" rel="stylesheet" />
 </head>
@@ -37,5 +39,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 </html>
