--- a/BlazorServer/Shared/NavMenu.razor
+++ b/BlazorServer/Shared/NavMenu.razor
@@ -23,9 +23,15 @@
             </NavLink>
         </li>
         
-         <li class="nav-item px-3">
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="radzencounter">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Radzen counter
+            </NavLink>
+        </li>
+        
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="chart">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Charts
             </NavLink>
         </li>
     </ul>
