index.html: initial push of Radzen datagrid

--- a/BlazorServer/Pages/_Host.cshtml
+++ b/BlazorServer/Pages/_Host.cshtml
@@ -36,6 +36,7 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <script src="_framework/blazor.server.js"></script>
+<script src="_framework/blazor.server.js"></script>
+<script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 </html>
