--- a/BlazorServer/Pages/FetchData.razor
+++ b/BlazorServer/Pages/FetchData.razor
@@ -10,7 +10,7 @@
             <thead class="thead-dark">
                 <tr>
                     <th>Weather Id</th>
-                    <th>Week Day</th>
+                    <!--- <th>Week Day</th> --->
                     <th>Temperature</th>
                     <th>Date</th>
                     <th>Delete weather</th>
@@ -23,7 +23,7 @@
                     {
                         <tr @onclick="(() => SetWeatherForUpdate(weather))">
                             <td>@weather.WeatherId</td>
-                            <td>@weather.WeekDay</td>
+                            <!--- <td> at weather.WeekDay </td> -->
                             <td>@weather.Temperature</td>
                             <td>@weather.DateTime</td>
                             <td><button class="btn btn-danger" @onclick="(() => DeleteWeather(weather))">Delete</button></td>
@@ -42,10 +42,12 @@
         <div class="col-5 bg-light m-2 justify-content-start">
             <div class="p-3 mb-3 bg-primary text-white text-center">Add New Weather</div>
             <EditForm Model="@NewWeatherDay">
+                <!---
                 <div class="form-group">
                     <label for="WeekDay">Weather Day Name</label>
-                    <input type="text" id="WeekDay" class="form-control" @bind-value="@NewWeatherDay.WeekDay" />
+                    <input type="text" id="WeekDay" class="form-control" at bind-value=" at NewWeatherDay.WeekDay" />
                 </div>
+                --->
 
                 <div class="form-group">
                     <label for="Temperature">Temperature</label>
@@ -62,11 +64,13 @@
             <div class="p-3 mb-1 bg-primary text-white text-center">Update Weather</div>
 
             <EditForm Model="@_updateWeatherDay">
-                <div class="form-group">
-                    <label for="WeekDay">Weather Day Name</label>
-                    <input type="text" id="weekday" class="form-control" @bind-value="@_updateWeatherDay.WeekDay" />
-                </div>
-
+                
+            <!---
+            <div class="form-group">
+                <label for="WeekDay">Weather Day Name</label>
+                <input type="text" id="weekday" class="form-control" at bind-value=" at _updateWeatherDay.WeekDay" />
+            </div>
+            --->
                 <div class="form-group">
                     <label for="Temperature">Temperature</label>
                     <input type="text" id="temperature" class="form-control" @bind="@_updateWeatherDay.Temperature" />
