Remove weekday anc changes to chart

--- a/BlazorServer/Pages/Chart.razor
+++ b/BlazorServer/Pages/Chart.razor
@@ -11,7 +11,7 @@
                 <RadzenLineSeries Smooth="@smooth" Data="@_weathers" CategoryProperty="DateTime" Title="2020" LineType="LineType.Dashed" ValueProperty="Temperature">
                     <RadzenMarkers MarkerType="MarkerType.Circle" />
                 </RadzenLineSeries>
-                <RadzenCategoryAxis Padding="20" FormatString="{0:MMM}" />
+                <RadzenCategoryAxis Padding="20" FormatString="{0:M}" />
                 <RadzenValueAxis Min="0" Max="30" Step="5">
                     <RadzenGridLines Visible="true" />
                     <RadzenAxisTitle Text="Temperature in Celsius" />
